--- a/index.html
+++ b/index.html
@@ -37,19 +37,30 @@
 
   <main>
     <!-- HERO -->
- <div class="hero-actions">
-            <a href="app.html" class="btn btn-primary">Open app</a>
-            <a href="#devs" class="btn btn-secondary">For developers</a>
-        </div>
+  <section id="hero" class="hero">
+    <div class="hero-content">
+      <h1>The football data oracle built for AI, betting and Web3.</h1>
 
-        <p class="hero-tagline">
-            Humans watch the match. Smart contracts read ScoreFeed.
-        </p>
+      <p class="hero-subtitle">
+        Real-time match data, verified results and structured football feeds for builders and prediction markets.
+      </p>
+
+      <div class="hero-actions">
+        <a href="app.html" class="btn btn-primary">Open app</a>
+        <a href="#devs" class="btn btn-secondary">For developers</a>
+      </div>
+
+      <p class="hero-tagline">
+        Humans watch the match. Smart contracts read ScoreFeed.
+      </p>
+    </div>
 
       <!-- LIVE SCOREBOARD PANEL -->
       <aside class="hero-panel">
         <div class="panel-inner">
           <div class="panel-title">Live scoreboard</div>
+          </aside>
+        </section>
 
           <div class="scoreboard">
             <div class="panel-row header">
